# cache-kill

./: .gitignore  Cargo.toml  DETAILED.md  Makefile  README.md  install.ps1  install.sh  npx-cache-report.json  test_toml.rs
.cargo/: config.toml
.github/actions/cachekill/: action.yml
.github/workflows/: ci.yml  release.yml
ci/: circle-orb.yml  gitlab-cachekill.yml
src/: actions.rs  cache_entry.rs  ci.rs  config.rs  discover.rs  docker.rs  doctor.rs  hf.rs  inspect.rs  main.rs  mcp.rs  npx.rs  output.rs  torch.rs  util.rs
src/edge/: cloudflare.rs  mod.rs  vercel.rs
src/package_managers/: common.rs  mod.rs  npm.rs  pnpm.rs  traits.rs  yarn.rs
tests/: integration_tests.rs  js_pm_e2e.rs  js_pm_integration.rs
