[package]
name = "cachekill"
version = "0.1.2"
edition = "2021"
authors = ["Kage <info@kagehq.com>"]
description = "A CLI tool to safely nuke development and build caches"
license = "FSL-1.1-MIT"
repository = "https://github.com/kagehq/cachekill"
keywords = ["cache", "cleanup", "development", "build", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cachekill"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
time = "0.3"
walkdir = "2.4"
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humansize = "2.1"
indicatif = "0.17"
sysinfo = "0.30"
dirs = "5.0"
inquire = "0.6"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
fs_extra = "1.3"
which = "6.0"
toml = "0.8"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
